[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "push2-nuendo-bridge"
version = "1.0.0"
description = "Turn your Ableton Push 2 into a control surface for Steinberg Nuendo 14"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["push2", "nuendo", "cubase", "midi", "daw", "controller"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "push2-python>=0.3.0",
    "python-rtmidi>=1.5.0",
    "mido>=1.3.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.scripts]
push2-nuendo = "src.main:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/push2-nuendo-bridge"
Issues = "https://github.com/YOUR_USERNAME/push2-nuendo-bridge/issues"

[tool.setuptools.packages.find]
include = ["src*"]
