[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "push2-nuendo-bridge"
version = "1.0.2"
description = "Turn your Ableton Push 2 into a control surface for Steinberg Nuendo / Cubase"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
keywords = ["push2", "nuendo", "cubase", "midi", "daw", "controller"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "push2-python>=0.3.0",
    "python-rtmidi>=1.5.0",
    "mido>=1.3.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
]

[project.scripts]
push2-nuendo = "src.main:main"

[project.urls]
Homepage = "https://github.com/mbourque-mix/Push2Nuendo-Bridge"
Issues = "https://github.com/mbourque-mix/Push2Nuendo-Bridge/issues"
Website = "https://push2bridge.kaikuaudio.com"

[tool.setuptools.packages.find]
include = ["src*"]
